fixed bugs and added icons. Forecase boxes now have aligned height

--- a/style.css
+++ b/style.css
@@ -26,4 +26,6 @@ p{
 .rounded{
     border-radius: 15%;
 }
-
+.stretch{
+    min-height: 100%;
+}
